--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -251,7 +251,15 @@
 
 
 
-
+% resampling strategies for SMC particle filtering inference paper
+@inproceedings{douc2005comparison,
+  title={Comparison of resampling schemes for particle filtering},
+  author={Douc, R. and Capp{\'e}, O.},
+  booktitle={Image and Signal Processing and Analysis, 2005. ISPA 2005. Proceedings of the 4th International Symposium on},
+  pages={64--69},
+  year={2005},
+  organization={Ieee}
+}
 
 
 
