re did format of whole paper. IMPORTANT: the next .tex file of interest is: paper_short.tex

--- a/ltx/paper_brainstorm.tex
+++ b/ltx/paper_brainstorm.tex
@@ -1,7 +1,7 @@
 % header stuff
 % ------------
 
-\documentclass[smallcondensed, final]{svjour3}
+\documentclass[twocolumn, final]{svjour3}
 % \documentclass[smallcondensed, final]{svjour3}[1/1/2012]
 \usepackage[square,numbers]{natbib}
 \usepackage{amsmath, epsfig}
